Bug 503374 - "Save default" for the axes does not seem to work well.
Summary: "Save default" for the axes does not seem to work well.
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: latest
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Stefan Gerlach
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-04-26 04:33 UTC by Yoshinobu Shimamura
Modified: 2025-05-19 02:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.04.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yoshinobu Shimamura 2025-04-26 04:33:01 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY
In labplot 2.11.80, "Save default" for the axes does not seem to work well.
1. "Save Default" does not work for the font selection and font size in the "Title" tabs in the X and Y axes.
2. "Save Default" for the label offset in the "Labels" tab for one axis changes the same label offsets for both axes.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows:  11 Home 24H2
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Stefan Gerlach 2025-05-12 08:21:30 UTC
Was fixed in 2.12.80.
Comment 2 Yoshinobu Shimamura 2025-05-13 10:19:56 UTC
Thank you for your quick responce. Though the bugs still exit in the current development version I can download from the official website, I think the corrections will be incorporated into a newer version. Thanks again!
Comment 3 Stefan Gerlach 2025-05-13 18:09:30 UTC
I updated the Windows package now. Can you have a look if everything works now as expected?
Comment 4 Alexander Semke 2025-05-14 15:36:43 UTC
Git commit 1a375547694dcbbfae419dcb15569bc084203bef by Alexander Semke.
Committed on 14/05/2025 at 09:25.
Pushed by asemke into branch 'master'.

When saving the game, use the proper extension "pgn" in case no extension was provided
in the file dialog. The currently used extension and the code in this area is a copy&paste bug
from LabPlot's code long time and we correct it now.

There is another problem that needs to be addressed here. Namely, no extension added on default
n the file dialog on non-Plasma desktops (reproduced the problem on IceWM, also reported in BUG: 503374).
This is something that needs to be checked in KF independently of this commit which we
need anyway also for cases where the option "automatically select the extension" was
not checked in the dialog and we need to ensure the proper extension in the code.
FIXED-IN: 25.04.2

M  +5    -17   src/knights.cpp

https://invent.kde.org/games/knights/-/commit/1a375547694dcbbfae419dcb15569bc084203bef
Comment 5 Alexander Semke 2025-05-14 19:08:57 UTC
please ignore the last comment, doesn't belong to this bug ticket, sorry.
Comment 6 Yoshinobu Shimamura 2025-05-16 08:31:07 UTC
Thank you for uploading a new development version. I tried it.
- The font of axis title was correctly saved by "Save default". Thanks!
- A new bug was found: when a new plot is created after "Save default" after changing axis title font properties, the axis title sometimes unintentionally rotates.
I appreciate it if you could check the new bug.
Comment 7 Stefan Gerlach 2025-05-18 12:49:25 UTC
Git commit 0af5f6b6038c1662545202e8cee156c4fdbbcd0c by Stefan Gerlach.
Committed on 18/05/2025 at 12:49.
Pushed by sgerlach into branch 'release/2.12'.

axis title: fix default rotation handling

M  +2    -0    ChangeLog
M  +10   -9    src/backend/worksheet/plots/cartesian/Axis.cpp
M  +13   -3    src/frontend/dockwidgets/AxisDock.cpp

https://invent.kde.org/education/labplot/-/commit/0af5f6b6038c1662545202e8cee156c4fdbbcd0c
Comment 8 Stefan Gerlach 2025-05-18 12:54:43 UTC
Git commit 6aafe4d125a0eeedc9e565ab011e85664ca57ac7 by Stefan Gerlach.
Committed on 18/05/2025 at 12:45.
Pushed by sgerlach into branch 'master'.

axis title: fix default rotation handling

M  +1    -0    ChangeLog
M  +10   -9    src/backend/worksheet/plots/cartesian/Axis.cpp
M  +13   -3    src/frontend/dockwidgets/AxisDock.cpp

https://invent.kde.org/education/labplot/-/commit/6aafe4d125a0eeedc9e565ab011e85664ca57ac7
Comment 9 Yoshinobu Shimamura 2025-05-19 02:56:35 UTC
Thank you for your quick response. I confirmed that the newer development version works well for the modification on the "Save default" behavior for the axis title. Thank you again!